// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSlider should render correctly 1`] = `
<react-slider
  barClassName="bpk-slider__bar"
  className="bpk-slider"
  handleActiveClassName="bpk-slider__handle--active"
  handleClassName="bpk-slider__handle"
  invert={false}
  max={100}
  min={0}
  value={25}
  withBars={true}
/>
`;

exports[`BpkSlider should render correctly with a "className" attribute 1`] = `
<react-slider
  barClassName="bpk-slider__bar"
  className="bpk-slider my-slider"
  handleActiveClassName="bpk-slider__handle--active"
  handleClassName="bpk-slider__handle"
  invert={false}
  max={100}
  min={0}
  value={25}
  withBars={true}
/>
`;

exports[`BpkSlider should render correctly with a "large" attribute 1`] = `
<react-slider
  barClassName="bpk-slider__bar"
  className="bpk-slider bpk-slider--large"
  handleActiveClassName="bpk-slider__handle--active"
  handleClassName="bpk-slider__handle bpk-slider__handle--large"
  invert={false}
  max={9}
  min={0}
  value={2}
  withBars={true}
/>
`;

exports[`BpkSlider should render correctly with a "step" attribute 1`] = `
<react-slider
  barClassName="bpk-slider__bar"
  className="bpk-slider"
  handleActiveClassName="bpk-slider__handle--active"
  handleClassName="bpk-slider__handle"
  invert={false}
  max={100}
  min={0}
  step={10}
  value={2}
  withBars={true}
/>
`;

exports[`BpkSlider should render correctly with a minimum distance between controls 1`] = `
<react-slider
  barClassName="bpk-slider__bar"
  className="bpk-slider bpk-slider--range"
  handleActiveClassName="bpk-slider__handle--active"
  handleClassName="bpk-slider__handle"
  invert={false}
  max={100}
  min={0}
  minDistance={20}
  value={
    Array [
      10,
      90,
    ]
  }
  withBars={true}
/>
`;

exports[`BpkSlider should render correctly with a range of values 1`] = `
<react-slider
  barClassName="bpk-slider__bar"
  className="bpk-slider bpk-slider--range"
  handleActiveClassName="bpk-slider__handle--active"
  handleClassName="bpk-slider__handle"
  invert={false}
  max={100}
  min={0}
  value={
    Array [
      10,
      90,
    ]
  }
  withBars={true}
/>
`;
